name:                bouncyball
version:             0.1.0.0
synopsis:            A bouncing ball.
homepage:            https://github.com/passy/bouncyball
license:             MIT
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable bouncyball
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       Yampa,
                       GLUT >= 2.3
  default-language:    Haskell2010
